dupaxd/BNFC/ParLatte.y
-- This Happy file was machine-generated by the BNF converter
{
{-# OPTIONS_GHC -fno-warn-incomplete-patterns -fno-warn-overlapping-patterns #-}
module BNFC.ParLatte where
import BNFC.AbsLatte
import BNFC.LexLatte
import BNFC.ErrM

}

%name pProgram Program
-- no lexer declaration
%monad { Err } { thenM } { returnM }
%tokentype {Token}
%token
  '!' { PT _ (TS _ 1) }
  '!=' { PT _ (TS _ 2) }
  '%' { PT _ (TS _ 3) }
  '&&' { PT _ (TS _ 4) }
  '(' { PT _ (TS _ 5) }
  ')' { PT _ (TS _ 6) }
  ')null' { PT _ (TS _ 7) }
  '*' { PT _ (TS _ 8) }
  '+' { PT _ (TS _ 9) }
  '++' { PT _ (TS _ 10) }
  ',' { PT _ (TS _ 11) }
  '-' { PT _ (TS _ 12) }
  '--' { PT _ (TS _ 13) }
  '.' { PT _ (TS _ 14) }
  '/' { PT _ (TS _ 15) }
  ';' { PT _ (TS _ 16) }
  '<' { PT _ (TS _ 17) }
  '<=' { PT _ (TS _ 18) }
  '=' { PT _ (TS _ 19) }
  '==' { PT _ (TS _ 20) }
  '>' { PT _ (TS _ 21) }
  '>=' { PT _ (TS _ 22) }
  'boolean' { PT _ (TS _ 23) }
  'class' { PT _ (TS _ 24) }
  'else' { PT _ (TS _ 25) }
  'extends' { PT _ (TS _ 26) }
  'false' { PT _ (TS _ 27) }
  'if' { PT _ (TS _ 28) }
  'int' { PT _ (TS _ 29) }
  'new' { PT _ (TS _ 30) }
  'null' { PT _ (TS _ 31) }
  'return' { PT _ (TS _ 32) }
  'string' { PT _ (TS _ 33) }
  'true' { PT _ (TS _ 34) }
  'void' { PT _ (TS _ 35) }
  'while' { PT _ (TS _ 36) }
  '{' { PT _ (TS _ 37) }
  '||' { PT _ (TS _ 38) }
  '}' { PT _ (TS _ 39) }
  L_ident  { PT _ (TV $$) }
  L_integ  { PT _ (TI $$) }
  L_quoted { PT _ (TL $$) }

%%

Ident   :: { Ident }
Ident    : L_ident  { Ident $1 }

Integer :: { Integer }
Integer  : L_integ  { (read ( $1)) :: Integer }

String  :: { String }
String   : L_quoted {  $1 }

Program :: { Program }
Program : ListTopDef { BNFC.AbsLatte.Program $1 }
TopDef :: { TopDef }
TopDef : Type Ident '(' ListArg ')' Block { BNFC.AbsLatte.FnDef $1 $2 $4 $6 }
       | 'class' Ident Inheritance '{' ListMemberDecl '}' { BNFC.AbsLatte.StrDef $2 $3 $5 }
Inheritance :: { Inheritance }
Inheritance : 'extends' Ident { BNFC.AbsLatte.Extends $2 }
            | {- empty -} { BNFC.AbsLatte.NoInherit }
MemberDecl :: { MemberDecl }
MemberDecl : Type Ident { BNFC.AbsLatte.FieldDecl $1 $2 }
           | Type Ident '(' ListArg ')' Block { BNFC.AbsLatte.MethDecl $1 $2 $4 $6 }
ListMemberDecl :: { [MemberDecl] }
ListMemberDecl : {- empty -} { [] }
               | MemberDecl { (:[]) $1 }
               | MemberDecl ';' ListMemberDecl { (:) $1 $3 }
ListTopDef :: { [TopDef] }
ListTopDef : TopDef { (:[]) $1 } | TopDef ListTopDef { (:) $1 $2 }
Arg :: { Arg }
Arg : Type Ident { BNFC.AbsLatte.Arg $1 $2 }
ListArg :: { [Arg] }
ListArg : {- empty -} { [] }
        | Arg { (:[]) $1 }
        | Arg ',' ListArg { (:) $1 $3 }
Block :: { Block }
Block : '{' ListStmt '}' { BNFC.AbsLatte.Block (reverse $2) }
ListStmt :: { [Stmt] }
ListStmt : {- empty -} { [] } | ListStmt Stmt { flip (:) $1 $2 }
Stmt :: { Stmt }
Stmt : ';' { BNFC.AbsLatte.Empty }
     | Block { BNFC.AbsLatte.BStmt $1 }
     | Type ListItem ';' { BNFC.AbsLatte.Decl $1 $2 }
     | Ident '=' Expr ';' { BNFC.AbsLatte.Ass $1 $3 }
     | Ident '++' ';' { BNFC.AbsLatte.Incr $1 }
     | Ident '--' ';' { BNFC.AbsLatte.Decr $1 }
     | 'return' Expr ';' { BNFC.AbsLatte.Ret $2 }
     | 'return' ';' { BNFC.AbsLatte.VRet }
     | 'if' '(' Expr ')' Stmt { BNFC.AbsLatte.Cond $3 $5 }
     | 'if' '(' Expr ')' Stmt 'else' Stmt { BNFC.AbsLatte.CondElse $3 $5 $7 }
     | 'while' '(' Expr ')' Stmt { BNFC.AbsLatte.While $3 $5 }
     | Expr ';' { BNFC.AbsLatte.StExp $1 }
Item :: { Item }
Item : Ident { BNFC.AbsLatte.NoInit $1 }
     | Ident '=' Expr { BNFC.AbsLatte.Init $1 $3 }
ListItem :: { [Item] }
ListItem : Item { (:[]) $1 } | Item ',' ListItem { (:) $1 $3 }
Type :: { Type }
Type : 'int' { BNFC.AbsLatte.Int }
     | 'string' { BNFC.AbsLatte.Str }
     | 'boolean' { BNFC.AbsLatte.Bool }
     | 'void' { BNFC.AbsLatte.Void }
     | Ident { BNFC.AbsLatte.Class $1 }
ListType :: { [Type] }
ListType : {- empty -} { [] }
         | Type { (:[]) $1 }
         | Type ',' ListType { (:) $1 $3 }
Expr6 :: { Expr }
Expr6 : Ident { BNFC.AbsLatte.EVar $1 }
      | Integer { BNFC.AbsLatte.ELitInt $1 }
      | 'true' { BNFC.AbsLatte.ELitTrue }
      | 'false' { BNFC.AbsLatte.ELitFalse }
      | 'null' { BNFC.AbsLatte.ENull }
      | 'new' Ident { BNFC.AbsLatte.ENew $2 }
      | Ident '(' ListExpr ')' { BNFC.AbsLatte.EApp $1 $3 }
      | String { BNFC.AbsLatte.EString $1 }
      | '(' Ident ')null' { BNFC.AbsLatte.ECast $2 }
      | Ident '.' Ident { BNFC.AbsLatte.EAcc $1 $3 }
      | Ident '.' Ident '(' ListExpr ')' { BNFC.AbsLatte.EMeth $1 $3 $5 }
      | '(' Expr ')' { $2 }
Expr5 :: { Expr }
Expr5 : '-' Expr6 { BNFC.AbsLatte.Neg $2 }
      | '!' Expr6 { BNFC.AbsLatte.Not $2 }
      | Expr6 { $1 }
Expr4 :: { Expr }
Expr4 : Expr4 MulOp Expr5 { BNFC.AbsLatte.EMul $1 $2 $3 }
      | Expr5 { $1 }
Expr3 :: { Expr }
Expr3 : Expr3 AddOp Expr4 { BNFC.AbsLatte.EAdd $1 $2 $3 }
      | Expr4 { $1 }
Expr2 :: { Expr }
Expr2 : Expr2 RelOp Expr3 { BNFC.AbsLatte.ERel $1 $2 $3 }
      | Expr3 { $1 }
Expr1 :: { Expr }
Expr1 : Expr2 '&&' Expr1 { BNFC.AbsLatte.EAnd $1 $3 }
      | Expr2 { $1 }
Expr :: { Expr }
Expr : Expr1 '||' Expr { BNFC.AbsLatte.EOr $1 $3 } | Expr1 { $1 }
ListExpr :: { [Expr] }
ListExpr : {- empty -} { [] }
         | Expr { (:[]) $1 }
         | Expr ',' ListExpr { (:) $1 $3 }
AddOp :: { AddOp }
AddOp : '+' { BNFC.AbsLatte.Plus } | '-' { BNFC.AbsLatte.Minus }
MulOp :: { MulOp }
MulOp : '*' { BNFC.AbsLatte.Times }
      | '/' { BNFC.AbsLatte.Div }
      | '%' { BNFC.AbsLatte.Mod }
RelOp :: { RelOp }
RelOp : '<' { BNFC.AbsLatte.LTH }
      | '<=' { BNFC.AbsLatte.LE }
      | '>' { BNFC.AbsLatte.GTH }
      | '>=' { BNFC.AbsLatte.GE }
      | '==' { BNFC.AbsLatte.EQU }
      | '!=' { BNFC.AbsLatte.NE }
{

returnM :: a -> Err a
returnM = return

thenM :: Err a -> (a -> Err b) -> Err b
thenM = (>>=)

happyError :: [Token] -> Err a
happyError ts =
  Bad $ "syntax error at " ++ tokenPos ts ++
  case ts of
    []      -> []
    [Err _] -> " due to lexer error"
    t:_     -> " before `" ++ id(prToken t) ++ "'"

myLexer = tokens
}
