src/ParLatte.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.12 from ParLatte.y
-----------------------------------------------------------------------------

state 106 contains 1 shift/reduce conflicts.

rule 35 is unused
rule 36 is unused
rule 37 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	Ident -> L_ident                                   (1)
	Integer -> L_integ                                 (2)
	String -> L_quoted                                 (3)
	Program -> ListTopDef                              (4)
	TopDef -> Type Ident '(' ListArg ')' Block         (5)
	ListTopDef -> TopDef                               (6)
	ListTopDef -> TopDef ListTopDef                    (7)
	Arg -> Type Ident                                  (8)
	ListArg ->                                         (9)
	ListArg -> Arg                                     (10)
	ListArg -> Arg ',' ListArg                         (11)
	Block -> '{' ListStmt '}'                          (12)
	ListStmt ->                                        (13)
	ListStmt -> ListStmt Stmt                          (14)
	Stmt -> ';'                                        (15)
	Stmt -> Block                                      (16)
	Stmt -> Type ListItem ';'                          (17)
	Stmt -> Ident '=' Expr ';'                         (18)
	Stmt -> Ident '++' ';'                             (19)
	Stmt -> Ident '--' ';'                             (20)
	Stmt -> 'return' Expr ';'                          (21)
	Stmt -> 'return' ';'                               (22)
	Stmt -> 'if' '(' Expr ')' Stmt                     (23)
	Stmt -> 'if' '(' Expr ')' Stmt 'else' Stmt         (24)
	Stmt -> 'while' '(' Expr ')' Stmt                  (25)
	Stmt -> Expr ';'                                   (26)
	Item -> Ident                                      (27)
	Item -> Ident '=' Expr                             (28)
	ListItem -> Item                                   (29)
	ListItem -> Item ',' ListItem                      (30)
	Type -> 'int'                                      (31)
	Type -> 'string'                                   (32)
	Type -> 'boolean'                                  (33)
	Type -> 'void'                                     (34)
	ListType ->                                        (35)
	ListType -> Type                                   (36)
	ListType -> Type ',' ListType                      (37)
	Expr6 -> Ident                                     (38)
	Expr6 -> Integer                                   (39)
	Expr6 -> 'true'                                    (40)
	Expr6 -> 'false'                                   (41)
	Expr6 -> Ident '(' ListExpr ')'                    (42)
	Expr6 -> String                                    (43)
	Expr6 -> '(' Expr ')'                              (44)
	Expr5 -> '-' Expr6                                 (45)
	Expr5 -> '!' Expr6                                 (46)
	Expr5 -> Expr6                                     (47)
	Expr4 -> Expr4 MulOp Expr5                         (48)
	Expr4 -> Expr5                                     (49)
	Expr3 -> Expr3 AddOp Expr4                         (50)
	Expr3 -> Expr4                                     (51)
	Expr2 -> Expr2 RelOp Expr3                         (52)
	Expr2 -> Expr3                                     (53)
	Expr1 -> Expr2 '&&' Expr1                          (54)
	Expr1 -> Expr2                                     (55)
	Expr -> Expr1 '||' Expr                            (56)
	Expr -> Expr1                                      (57)
	ListExpr ->                                        (58)
	ListExpr -> Expr                                   (59)
	ListExpr -> Expr ',' ListExpr                      (60)
	AddOp -> '+'                                       (61)
	AddOp -> '-'                                       (62)
	MulOp -> '*'                                       (63)
	MulOp -> '/'                                       (64)
	MulOp -> '%'                                       (65)
	RelOp -> '<'                                       (66)
	RelOp -> '<='                                      (67)
	RelOp -> '>'                                       (68)
	RelOp -> '>='                                      (69)
	RelOp -> '=='                                      (70)
	RelOp -> '!='                                      (71)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&&'           { PT _ (TS _ 4) }
	'('            { PT _ (TS _ 5) }
	')'            { PT _ (TS _ 6) }
	'*'            { PT _ (TS _ 7) }
	'+'            { PT _ (TS _ 8) }
	'++'           { PT _ (TS _ 9) }
	','            { PT _ (TS _ 10) }
	'-'            { PT _ (TS _ 11) }
	'--'           { PT _ (TS _ 12) }
	'/'            { PT _ (TS _ 13) }
	';'            { PT _ (TS _ 14) }
	'<'            { PT _ (TS _ 15) }
	'<='           { PT _ (TS _ 16) }
	'='            { PT _ (TS _ 17) }
	'=='           { PT _ (TS _ 18) }
	'>'            { PT _ (TS _ 19) }
	'>='           { PT _ (TS _ 20) }
	'boolean'      { PT _ (TS _ 21) }
	'else'         { PT _ (TS _ 22) }
	'false'        { PT _ (TS _ 23) }
	'if'           { PT _ (TS _ 24) }
	'int'          { PT _ (TS _ 25) }
	'return'       { PT _ (TS _ 26) }
	'string'       { PT _ (TS _ 27) }
	'true'         { PT _ (TS _ 28) }
	'void'         { PT _ (TS _ 29) }
	'while'        { PT _ (TS _ 30) }
	'{'            { PT _ (TS _ 31) }
	'||'           { PT _ (TS _ 32) }
	'}'            { PT _ (TS _ 33) }
	L_ident        { PT _ (TV $$) }
	L_integ        { PT _ (TI $$) }
	L_quoted       { PT _ (TL $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	Ident           rule  1
	Integer         rule  2
	String          rule  3
	Program         rule  4
	TopDef          rule  5
	ListTopDef      rules 6, 7
	Arg             rule  8
	ListArg         rules 9, 10, 11
	Block           rule  12
	ListStmt        rules 13, 14
	Stmt            rules 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26
	Item            rules 27, 28
	ListItem        rules 29, 30
	Type            rules 31, 32, 33, 34
	ListType        rules 35, 36, 37
	Expr6           rules 38, 39, 40, 41, 42, 43, 44
	Expr5           rules 45, 46, 47
	Expr4           rules 48, 49
	Expr3           rules 50, 51
	Expr2           rules 52, 53
	Expr1           rules 54, 55
	Expr            rules 56, 57
	ListExpr        rules 58, 59, 60
	AddOp           rules 61, 62
	MulOp           rules 63, 64, 65
	RelOp           rules 66, 67, 68, 69, 70, 71

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'boolean'      shift, and enter state 7
	'int'          shift, and enter state 8
	'string'       shift, and enter state 9
	'void'         shift, and enter state 10

	Program        goto state 3
	TopDef         goto state 4
	ListTopDef     goto state 5
	Type           goto state 6

State 1


	L_ident        shift, and enter state 2


State 2

	Ident -> L_ident .                                  (rule 1)

	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'&&'           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	'++'           reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'--'           reduce using rule 1
	'/'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'||'           reduce using rule 1


State 3

	%start_pProgram -> Program .                        (rule 0)

	%eof           accept


State 4

	ListTopDef -> TopDef .                              (rule 6)
	ListTopDef -> TopDef . ListTopDef                   (rule 7)

	'boolean'      shift, and enter state 7
	'int'          shift, and enter state 8
	'string'       shift, and enter state 9
	'void'         shift, and enter state 10
	%eof           reduce using rule 6

	TopDef         goto state 4
	ListTopDef     goto state 12
	Type           goto state 6

State 5

	Program -> ListTopDef .                             (rule 4)

	%eof           reduce using rule 4


State 6

	TopDef -> Type . Ident '(' ListArg ')' Block        (rule 5)

	L_ident        shift, and enter state 2

	Ident          goto state 11

State 7

	Type -> 'boolean' .                                 (rule 33)

	L_ident        reduce using rule 33


State 8

	Type -> 'int' .                                     (rule 31)

	L_ident        reduce using rule 31


State 9

	Type -> 'string' .                                  (rule 32)

	L_ident        reduce using rule 32


State 10

	Type -> 'void' .                                    (rule 34)

	L_ident        reduce using rule 34


State 11

	TopDef -> Type Ident . '(' ListArg ')' Block        (rule 5)

	'('            shift, and enter state 13


State 12

	ListTopDef -> TopDef ListTopDef .                   (rule 7)

	%eof           reduce using rule 7


State 13

	TopDef -> Type Ident '(' . ListArg ')' Block        (rule 5)

	')'            reduce using rule 9
	'boolean'      shift, and enter state 7
	'int'          shift, and enter state 8
	'string'       shift, and enter state 9
	'void'         shift, and enter state 10

	Arg            goto state 14
	ListArg        goto state 15
	Type           goto state 16

State 14

	ListArg -> Arg .                                    (rule 10)
	ListArg -> Arg . ',' ListArg                        (rule 11)

	')'            reduce using rule 10
	','            shift, and enter state 19


State 15

	TopDef -> Type Ident '(' ListArg . ')' Block        (rule 5)

	')'            shift, and enter state 18


State 16

	Arg -> Type . Ident                                 (rule 8)

	L_ident        shift, and enter state 2

	Ident          goto state 17

State 17

	Arg -> Type Ident .                                 (rule 8)

	')'            reduce using rule 8
	','            reduce using rule 8


State 18

	TopDef -> Type Ident '(' ListArg ')' . Block        (rule 5)

	'{'            shift, and enter state 22

	Block          goto state 21

State 19

	ListArg -> Arg ',' . ListArg                        (rule 11)

	')'            reduce using rule 9
	'boolean'      shift, and enter state 7
	'int'          shift, and enter state 8
	'string'       shift, and enter state 9
	'void'         shift, and enter state 10

	Arg            goto state 14
	ListArg        goto state 20
	Type           goto state 16

State 20

	ListArg -> Arg ',' ListArg .                        (rule 11)

	')'            reduce using rule 11


State 21

	TopDef -> Type Ident '(' ListArg ')' Block .        (rule 5)

	'boolean'      reduce using rule 5
	'int'          reduce using rule 5
	'string'       reduce using rule 5
	'void'         reduce using rule 5
	%eof           reduce using rule 5


State 22

	Block -> '{' . ListStmt '}'                         (rule 12)

	'!'            reduce using rule 13
	'('            reduce using rule 13
	'-'            reduce using rule 13
	';'            reduce using rule 13
	'boolean'      reduce using rule 13
	'false'        reduce using rule 13
	'if'           reduce using rule 13
	'int'          reduce using rule 13
	'return'       reduce using rule 13
	'string'       reduce using rule 13
	'true'         reduce using rule 13
	'void'         reduce using rule 13
	'while'        reduce using rule 13
	'{'            reduce using rule 13
	'}'            reduce using rule 13
	L_ident        reduce using rule 13
	L_integ        reduce using rule 13
	L_quoted       reduce using rule 13

	ListStmt       goto state 23

State 23

	Block -> '{' ListStmt . '}'                         (rule 12)
	ListStmt -> ListStmt . Stmt                         (rule 14)

	'!'            shift, and enter state 37
	'('            shift, and enter state 38
	'-'            shift, and enter state 39
	';'            shift, and enter state 40
	'boolean'      shift, and enter state 7
	'false'        shift, and enter state 41
	'if'           shift, and enter state 42
	'int'          shift, and enter state 8
	'return'       shift, and enter state 43
	'string'       shift, and enter state 9
	'true'         shift, and enter state 44
	'void'         shift, and enter state 10
	'while'        shift, and enter state 45
	'{'            shift, and enter state 22
	'}'            shift, and enter state 46
	L_ident        shift, and enter state 2
	L_integ        shift, and enter state 47
	L_quoted       shift, and enter state 48

	Ident          goto state 24
	Integer        goto state 25
	String         goto state 26
	Block          goto state 27
	Stmt           goto state 28
	Type           goto state 29
	Expr6          goto state 30
	Expr5          goto state 31
	Expr4          goto state 32
	Expr3          goto state 33
	Expr2          goto state 34
	Expr1          goto state 35
	Expr           goto state 36

State 24

	Stmt -> Ident . '=' Expr ';'                        (rule 18)
	Stmt -> Ident . '++' ';'                            (rule 19)
	Stmt -> Ident . '--' ';'                            (rule 20)
	Expr6 -> Ident .                                    (rule 38)
	Expr6 -> Ident . '(' ListExpr ')'                   (rule 42)

	'!='           reduce using rule 38
	'%'            reduce using rule 38
	'&&'           reduce using rule 38
	'('            shift, and enter state 77
	'*'            reduce using rule 38
	'+'            reduce using rule 38
	'++'           shift, and enter state 78
	'-'            reduce using rule 38
	'--'           shift, and enter state 79
	'/'            reduce using rule 38
	';'            reduce using rule 38
	'<'            reduce using rule 38
	'<='           reduce using rule 38
	'='            shift, and enter state 80
	'=='           reduce using rule 38
	'>'            reduce using rule 38
	'>='           reduce using rule 38
	'||'           reduce using rule 38


State 25

	Expr6 -> Integer .                                  (rule 39)

	'!='           reduce using rule 39
	'%'            reduce using rule 39
	'&&'           reduce using rule 39
	')'            reduce using rule 39
	'*'            reduce using rule 39
	'+'            reduce using rule 39
	','            reduce using rule 39
	'-'            reduce using rule 39
	'/'            reduce using rule 39
	';'            reduce using rule 39
	'<'            reduce using rule 39
	'<='           reduce using rule 39
	'=='           reduce using rule 39
	'>'            reduce using rule 39
	'>='           reduce using rule 39
	'||'           reduce using rule 39


State 26

	Expr6 -> String .                                   (rule 43)

	'!='           reduce using rule 43
	'%'            reduce using rule 43
	'&&'           reduce using rule 43
	')'            reduce using rule 43
	'*'            reduce using rule 43
	'+'            reduce using rule 43
	','            reduce using rule 43
	'-'            reduce using rule 43
	'/'            reduce using rule 43
	';'            reduce using rule 43
	'<'            reduce using rule 43
	'<='           reduce using rule 43
	'=='           reduce using rule 43
	'>'            reduce using rule 43
	'>='           reduce using rule 43
	'||'           reduce using rule 43


State 27

	Stmt -> Block .                                     (rule 16)

	'!'            reduce using rule 16
	'('            reduce using rule 16
	'-'            reduce using rule 16
	';'            reduce using rule 16
	'boolean'      reduce using rule 16
	'else'         reduce using rule 16
	'false'        reduce using rule 16
	'if'           reduce using rule 16
	'int'          reduce using rule 16
	'return'       reduce using rule 16
	'string'       reduce using rule 16
	'true'         reduce using rule 16
	'void'         reduce using rule 16
	'while'        reduce using rule 16
	'{'            reduce using rule 16
	'}'            reduce using rule 16
	L_ident        reduce using rule 16
	L_integ        reduce using rule 16
	L_quoted       reduce using rule 16


State 28

	ListStmt -> ListStmt Stmt .                         (rule 14)

	'!'            reduce using rule 14
	'('            reduce using rule 14
	'-'            reduce using rule 14
	';'            reduce using rule 14
	'boolean'      reduce using rule 14
	'false'        reduce using rule 14
	'if'           reduce using rule 14
	'int'          reduce using rule 14
	'return'       reduce using rule 14
	'string'       reduce using rule 14
	'true'         reduce using rule 14
	'void'         reduce using rule 14
	'while'        reduce using rule 14
	'{'            reduce using rule 14
	'}'            reduce using rule 14
	L_ident        reduce using rule 14
	L_integ        reduce using rule 14
	L_quoted       reduce using rule 14


State 29

	Stmt -> Type . ListItem ';'                         (rule 17)

	L_ident        shift, and enter state 2

	Ident          goto state 74
	Item           goto state 75
	ListItem       goto state 76

State 30

	Expr5 -> Expr6 .                                    (rule 47)

	'!='           reduce using rule 47
	'%'            reduce using rule 47
	'&&'           reduce using rule 47
	')'            reduce using rule 47
	'*'            reduce using rule 47
	'+'            reduce using rule 47
	','            reduce using rule 47
	'-'            reduce using rule 47
	'/'            reduce using rule 47
	';'            reduce using rule 47
	'<'            reduce using rule 47
	'<='           reduce using rule 47
	'=='           reduce using rule 47
	'>'            reduce using rule 47
	'>='           reduce using rule 47
	'||'           reduce using rule 47


State 31

	Expr4 -> Expr5 .                                    (rule 49)

	'!='           reduce using rule 49
	'%'            reduce using rule 49
	'&&'           reduce using rule 49
	')'            reduce using rule 49
	'*'            reduce using rule 49
	'+'            reduce using rule 49
	','            reduce using rule 49
	'-'            reduce using rule 49
	'/'            reduce using rule 49
	';'            reduce using rule 49
	'<'            reduce using rule 49
	'<='           reduce using rule 49
	'=='           reduce using rule 49
	'>'            reduce using rule 49
	'>='           reduce using rule 49
	'||'           reduce using rule 49


State 32

	Expr4 -> Expr4 . MulOp Expr5                        (rule 48)
	Expr3 -> Expr4 .                                    (rule 51)

	'!='           reduce using rule 51
	'%'            shift, and enter state 71
	'&&'           reduce using rule 51
	')'            reduce using rule 51
	'*'            shift, and enter state 72
	'+'            reduce using rule 51
	','            reduce using rule 51
	'-'            reduce using rule 51
	'/'            shift, and enter state 73
	';'            reduce using rule 51
	'<'            reduce using rule 51
	'<='           reduce using rule 51
	'=='           reduce using rule 51
	'>'            reduce using rule 51
	'>='           reduce using rule 51
	'||'           reduce using rule 51

	MulOp          goto state 70

State 33

	Expr3 -> Expr3 . AddOp Expr4                        (rule 50)
	Expr2 -> Expr3 .                                    (rule 53)

	'!='           reduce using rule 53
	'&&'           reduce using rule 53
	')'            reduce using rule 53
	'+'            shift, and enter state 68
	','            reduce using rule 53
	'-'            shift, and enter state 69
	';'            reduce using rule 53
	'<'            reduce using rule 53
	'<='           reduce using rule 53
	'=='           reduce using rule 53
	'>'            reduce using rule 53
	'>='           reduce using rule 53
	'||'           reduce using rule 53

	AddOp          goto state 67

State 34

	Expr2 -> Expr2 . RelOp Expr3                        (rule 52)
	Expr1 -> Expr2 . '&&' Expr1                         (rule 54)
	Expr1 -> Expr2 .                                    (rule 55)

	'!='           shift, and enter state 60
	'&&'           shift, and enter state 61
	')'            reduce using rule 55
	','            reduce using rule 55
	';'            reduce using rule 55
	'<'            shift, and enter state 62
	'<='           shift, and enter state 63
	'=='           shift, and enter state 64
	'>'            shift, and enter state 65
	'>='           shift, and enter state 66
	'||'           reduce using rule 55

	RelOp          goto state 59

State 35

	Expr -> Expr1 . '||' Expr                           (rule 56)
	Expr -> Expr1 .                                     (rule 57)

	')'            reduce using rule 57
	','            reduce using rule 57
	';'            reduce using rule 57
	'||'           shift, and enter state 58


State 36

	Stmt -> Expr . ';'                                  (rule 26)

	';'            shift, and enter state 57


State 37

	Expr5 -> '!' . Expr6                                (rule 46)

	'('            shift, and enter state 38
	'false'        shift, and enter state 41
	'true'         shift, and enter state 44
	L_ident        shift, and enter state 2
	L_integ        shift, and enter state 47
	L_quoted       shift, and enter state 48

	Ident          goto state 50
	Integer        goto state 25
	String         goto state 26
	Expr6          goto state 56

State 38

	Expr6 -> '(' . Expr ')'                             (rule 44)

	'!'            shift, and enter state 37
	'('            shift, and enter state 38
	'-'            shift, and enter state 39
	'false'        shift, and enter state 41
	'true'         shift, and enter state 44
	L_ident        shift, and enter state 2
	L_integ        shift, and enter state 47
	L_quoted       shift, and enter state 48

	Ident          goto state 50
	Integer        goto state 25
	String         goto state 26
	Expr6          goto state 30
	Expr5          goto state 31
	Expr4          goto state 32
	Expr3          goto state 33
	Expr2          goto state 34
	Expr1          goto state 35
	Expr           goto state 55

State 39

	Expr5 -> '-' . Expr6                                (rule 45)

	'('            shift, and enter state 38
	'false'        shift, and enter state 41
	'true'         shift, and enter state 44
	L_ident        shift, and enter state 2
	L_integ        shift, and enter state 47
	L_quoted       shift, and enter state 48

	Ident          goto state 50
	Integer        goto state 25
	String         goto state 26
	Expr6          goto state 54

State 40

	Stmt -> ';' .                                       (rule 15)

	'!'            reduce using rule 15
	'('            reduce using rule 15
	'-'            reduce using rule 15
	';'            reduce using rule 15
	'boolean'      reduce using rule 15
	'else'         reduce using rule 15
	'false'        reduce using rule 15
	'if'           reduce using rule 15
	'int'          reduce using rule 15
	'return'       reduce using rule 15
	'string'       reduce using rule 15
	'true'         reduce using rule 15
	'void'         reduce using rule 15
	'while'        reduce using rule 15
	'{'            reduce using rule 15
	'}'            reduce using rule 15
	L_ident        reduce using rule 15
	L_integ        reduce using rule 15
	L_quoted       reduce using rule 15


State 41

	Expr6 -> 'false' .                                  (rule 41)

	'!='           reduce using rule 41
	'%'            reduce using rule 41
	'&&'           reduce using rule 41
	')'            reduce using rule 41
	'*'            reduce using rule 41
	'+'            reduce using rule 41
	','            reduce using rule 41
	'-'            reduce using rule 41
	'/'            reduce using rule 41
	';'            reduce using rule 41
	'<'            reduce using rule 41
	'<='           reduce using rule 41
	'=='           reduce using rule 41
	'>'            reduce using rule 41
	'>='           reduce using rule 41
	'||'           reduce using rule 41


State 42

	Stmt -> 'if' . '(' Expr ')' Stmt                    (rule 23)
	Stmt -> 'if' . '(' Expr ')' Stmt 'else' Stmt        (rule 24)

	'('            shift, and enter state 53


State 43

	Stmt -> 'return' . Expr ';'                         (rule 21)
	Stmt -> 'return' . ';'                              (rule 22)

	'!'            shift, and enter state 37
	'('            shift, and enter state 38
	'-'            shift, and enter state 39
	';'            shift, and enter state 52
	'false'        shift, and enter state 41
	'true'         shift, and enter state 44
	L_ident        shift, and enter state 2
	L_integ        shift, and enter state 47
	L_quoted       shift, and enter state 48

	Ident          goto state 50
	Integer        goto state 25
	String         goto state 26
	Expr6          goto state 30
	Expr5          goto state 31
	Expr4          goto state 32
	Expr3          goto state 33
	Expr2          goto state 34
	Expr1          goto state 35
	Expr           goto state 51

State 44

	Expr6 -> 'true' .                                   (rule 40)

	'!='           reduce using rule 40
	'%'            reduce using rule 40
	'&&'           reduce using rule 40
	')'            reduce using rule 40
	'*'            reduce using rule 40
	'+'            reduce using rule 40
	','            reduce using rule 40
	'-'            reduce using rule 40
	'/'            reduce using rule 40
	';'            reduce using rule 40
	'<'            reduce using rule 40
	'<='           reduce using rule 40
	'=='           reduce using rule 40
	'>'            reduce using rule 40
	'>='           reduce using rule 40
	'||'           reduce using rule 40


State 45

	Stmt -> 'while' . '(' Expr ')' Stmt                 (rule 25)

	'('            shift, and enter state 49


State 46

	Block -> '{' ListStmt '}' .                         (rule 12)

	'!'            reduce using rule 12
	'('            reduce using rule 12
	'-'            reduce using rule 12
	';'            reduce using rule 12
	'boolean'      reduce using rule 12
	'else'         reduce using rule 12
	'false'        reduce using rule 12
	'if'           reduce using rule 12
	'int'          reduce using rule 12
	'return'       reduce using rule 12
	'string'       reduce using rule 12
	'true'         reduce using rule 12
	'void'         reduce using rule 12
	'while'        reduce using rule 12
	'{'            reduce using rule 12
	'}'            reduce using rule 12
	L_ident        reduce using rule 12
	L_integ        reduce using rule 12
	L_quoted       reduce using rule 12
	%eof           reduce using rule 12


State 47

	Integer -> L_integ .                                (rule 2)

	'!='           reduce using rule 2
	'%'            reduce using rule 2
	'&&'           reduce using rule 2
	')'            reduce using rule 2
	'*'            reduce using rule 2
	'+'            reduce using rule 2
	','            reduce using rule 2
	'-'            reduce using rule 2
	'/'            reduce using rule 2
	';'            reduce using rule 2
	'<'            reduce using rule 2
	'<='           reduce using rule 2
	'=='           reduce using rule 2
	'>'            reduce using rule 2
	'>='           reduce using rule 2
	'||'           reduce using rule 2


State 48

	String -> L_quoted .                                (rule 3)
